--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1"
   },
