--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "faker": "^5.5.3",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1"
   },
@@ -31,6 +30,10 @@
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "faker": "^5.5.3"
+  },
+  "engines": {
+    "node": "14.18.0"
   }
 }
