--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "joi": "^17.4.2",
-    "faker": "^5.5.3"
+    "pg": "^8.7.1"
   },
   "engines": {
     "node": "14.18.0"
